Fix breakdown graph position on mobile and make favorite anime smaller on mobile

--- a/app/assets/stylesheets/modules/activity-feed.css.scss
+++ b/app/assets/stylesheets/modules/activity-feed.css.scss
@@ -181,6 +181,7 @@
 
 .favorite-anime {
   .grid-thumb {
+    @extend .col-xs-4;
     @extend .col-sm-4;
   }
 }
@@ -202,6 +203,7 @@
 
 .anime-breakdown-panel{
   .breakdown-graph {
+    text-align: center;
     .breakdown-graph-data {
       position: relative;
       color: #ec8661;
